deploy/argocd/apps/spring-petclinic/release/base/spring-petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: spring-petclinic
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: spring-petclinic
