deploy/argocd/apps/spring-petclinic/release/base/spring-petclinic-networking.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app: spring-petclinic
  name: spring-petclinic-http-proxy
  namespace: spring-petclinic
spec:
  routes:
  - services:
    - name: spring-petclinic
      port: 8080
    conditions:
    - prefix: /
  virtualhost:
    fqdn: spring-petclinic.tanzu.frankcarta.com
